<resources>
    <string name="credential_title_quellaveco">Datos del conductor /Operador</string>
    <string name="empresa">EMPRESA</string>
    <string name="area">AREA</string>
    <string name="puesto">PUESTO</string>
    <string name="dospuntos">:</string>
    <string name ="licencia_interna">Licencia Interna de</string>
    <string name="autorizado_zona">AUTORIZADO A CONDUCIR</string>
    <string name="autorizado_conducir">AUTORIZADO A CONDUCIR</string>
    <string name="vencimiento_municipal">VENC. LICENCIA MUNICIPAL</string>
    <string name="licencia_municipal">CLASES</string>
    <string name ="conductor_operador">Conductor / Operador (Lico)</string>
    <string name ="autorizacion_conduccion">AUTORIZACION DE CONDUCCION PARA:</string>
    <string name ="licencia_explor">DATOS DE LA LICENCIA EXPLOR-K</string>
    <string name ="licencia_inter">LICENCIA INTERNA EXPLOR-K</string>
    <string name ="licencia_entregada">ENTREGADA/ACTIVA</string>
    <string name ="fecha_entrega">FECHA ENTREGA</string>
    <string name ="restricciones">RESTRICCIONES</string>
    <string name ="vigencia_documentos">VIGENCIA DE DOCUMENTOS</string>
    <string name ="vehiculo_equipos">VEHICULOS / EQUIPOS AUTORIZADOS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credential_title">CREDENCIAL PERSONAL</string>
    <string name="credential_note_anglo">• Debe de realizar su Checklist de Fatiga. \n• Debe de realizar su Checklist de Vehículos. \n• Debe de realizar su Preacceso con al menos 10 minutos de antelación al llegar a los controles de acceso de cada operación.</string>
    <string name="operation">Operación</string>
    <string name="active">Activa</string>
    <string name="date_delivery">Fec.Entrega</string>
    <string name="date_Exp">Fec.Licencia</string>
    <string name="cantColumns">1,2,3,4</string>
    <string name="credencial_angloamerican">CREDENCIAL ANGLOAMERICAN</string>
    <string name="flip_card">FlipCard</string>
    <string name="restriction">Restricciones</string>
    <string name="empty">NINGUNA</string>
    <string name="without_credential">El trabajador con ID %s no cuenta con credencial activa</string>
    <string name="obligation_driver">Obligaciones del conductor</string>
    <string name="obligation_first">- Debe de realizar Checklist de Fatiga.</string>
    <string name="obligation_second">- Debe de realizar Checklist de Vehículos.</string>
    <string name="obligation_third">- Debe de realizar su Preacceso con al menos 10 minutos de antelación al llegar a los controles de acceso de cada operación.</string>
    <string name="list_info">Una vez respondidas las preguntas de cada categoría, éstas son almacenadas de manera local y se les asigna los siguientes estados:</string>

    <!--Buttons -->
    <string name="btn_ok">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_send">Enviar</string>

    <string name="sworn_statement">DECLARO BAJO \n JURAMENTO</string>
    <string name="welcome_preuso">¡Bienvenidos a nuestra aplicación para la Inspección (Checklist) de Pre-Uso!</string>
    <string name="statement">Me encuentro en óptimas \n condiciones físicas y emocionales \n para conducir mi unidad móvil.\n En caso de identificarse alguna \n irregularidad, me someto a las \n acciones pertinentes que estime\n ANGLO - QUELLAVECO.</string>
    <string name="new_signature">La firma digitada será utilizada para la \n inspección de su vehículo</string>
    <string name="signature_registration_success_title">Atención</string>
    <string name="signature_registration_success_text">Registro de firma exitoso</string>
    <string name="signature_confirm_registration_text">¿Está seguro de guardar el registro de su firma?</string>
    <string name="data_access">Datos Accesos</string>
    <string name="company_contractor">Empresa Contratista</string>
    <string name="company_sub_contractor">Empresa Sub-Contratista</string>
    <string name="contract">Contrato:</string>
    <string name="validity_pass">Vigencia de Pase:</string>
    <string name="competencies_sub_title">Competencias</string>
    <string name="view_validity">Ver Vigencias</string>
    <string name="data_driver">Datos Conductor</string>
    <string name="number_lic_mtc">Numero Licencia MTC</string>
    <string name="category">Categoria</string>
    <string name="use_of_glasses">Uso de Lentes</string>
    <string name="vehicle_type">Tipo Vehiculo</string>
    <string name="driving_zones">Zonas Conduccion</string>
    <string name="see_more">VER MAS</string>
    <string name="name">Nombre</string>
    <string name="management">Gerencia</string>
    <string name="area_info">Area</string>
    <string name="position">Cargo</string>
    <string name="authorized_access">Autorizado Acceso</string>
    <string name="authorized_driver">Autorizado Conducir</string>
    <string name="register_signature">Registrar</string>
    <string name="title_book_courses">Reserva de cursos</string>
    <string name="not_available">No Disponible</string>
    <string name="available">Disponible</string>
    <string name="not_available_alert">No es posible continuar debido a que el curso no se encuentra disponible.</string>
    <string name="loading_history">Obteniendo historico</string>

    <string name="pam_title">Pre Acceso Mina</string>
    <string name="error">Error</string>
    <string name="Mensaje_conductor_pasajero">Conductor no puede ser registrado como pasajero.</string>
    <string name="Mensaje_vehiculo_particular">Ingreso fuera de hora, se registrara con fecha del dia siguiente.</string>
    <string name="buttonOk">Aceptar</string>
    <string name="identifier_not_received">Identificador no recibido</string>
    <string name="code_not_scanned">Codigo no escaneado</string>
    <string name="passenger_not_allowed">Pasajero no permitido.</string>
    <string name="Mensaje_rut_repetido">RUT ya insertado.</string>
    <string name="warning">AVISO</string>
    <string name="label_id">ID</string>
    <string name="no_authorized">NO AUTORIZADO</string>
    <string name="error_query_passenger">Error al consultar pasajero</string>
    <string name="retry">Reintentar</string>
    <string name="Mensaje_finalizacion">¿Desea finalizar?</string>
    <string name="yes">SI</string>
    <string name="no">No</string>
    <string name="atencion_titulo">ATENCION!</string>
    <string name="Mensaje_pasajero_autorizacion">No todos los pasajeros estan autorizados.</string>
    <string name="preaccess_record_successfully_inserted">Registro de preacceso insertado satisfactoriamente</string>
    <string name="Mensaje_preacceso_no">Registro de preacceso no insertado.</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="Mensaje_preacceso_incompleto">¿Está seguro que desea regresar? Control de Preacceso no guardado.</string>
    <string name="confirmation">Confirmación</string>
    <string name="title_inspection_history">Historial de Inspecciones</string>
    <string name="empty_data_title">Sin Registros</string>
    <string name="empty_signature_message">El campo de la firma no puede estar vacío</string>
    <string name="signature_not_saved_message">La firma no fue guardada</string>
    <string name="popup_add_comment_title">Atención</string>
    <string name="popup_add_comment_text">Las respuestas serán enviadas para su almacenamiento. Si considera necesario, puede escribir un comentario u observación.</string>
    <string name="error_in_vehicle_query">No encontramos registros, intente cambiando los parámetros de búsqueda</string>
    <string name="critical_answers">Al responder "NO" a una pregunta crítica, puedes continuar, pero el checklist no estará aprobado y se te recomienda no conducir </string>
    <string name="especial_caracteres">No se aceptan caracteres especiales, usar icono para validacion </string>
    <string name="finish_answers">FINALIZAR </string>
    <string name="save_answers">GUARDAR </string>
    <string name="initial_mileage">Kilometraje inicial</string>
    <string name="mantenaince">Prox. Mantenimiento (KM)</string>

    <string name="access_zones">Areas Autorizadas</string>
    <string name="loading">Cargando...</string>

    <string name="item_movement_id">N° Pase: %1s</string>
    <string name="item_movement_start_date">Inicio: %1s</string>
    <string name="item_movement_end_date">Término: %1s</string>
    <string name="item_movement_ostlt">OST: %1s</string>

    <string name="accept_movement">Se procederá con el rechazo del pase. Si considera necesario, puede escribir un comentario u observación.</string>
    <string name="description">Descripcion</string>
    <string name="error_showing_movement">Hubo un error aprobando el movimiento: %s</string>
    <string name="error_denying_movement">"Hubo un error rechazando el movimiento"</string>
    <string name="parameter_not_found">No se paso parametro id al detail fragment</string>
    <string name="invalid_tab_position">Tab at position: %s is not valid"</string>
    <string name="server_no_response">"No se recibió respuesta del servidor"</string>
</resources>