<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/popup_add_comment_title"
                android:textSize="@dimen/btn_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textInputLayoutPlate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/popup_add_comment_text"
                android:textSize="@dimen/btn_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:gravity="start|top"
                android:hint="Ingrese su comentario"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPlate" />

            <View
                android:id="@+id/vDivisor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/l_margin"
                android:alpha="0.5"
                android:background="@color/colorBlack"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:gravity="center|top"
                android:text="@string/btn_send"
                android:textColor="@color/turquoise"
                android:textSize="@dimen/btn_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/vDivisor" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:gravity="center|top"
                android:text="@string/btn_cancel"
                android:textColor="@color/turquoise"
                android:textSize="@dimen/btn_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnOK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vDivisor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>