<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backAnglo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/licencia_explor"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/title_credential"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/blancohumo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TableLayout
                        android:id="@+id/tableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical"
                        android:stretchColumns="@string/cantColumns"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TableRow>

                            <TextView
                                android:layout_column="1"
                                android:gravity="left"
                                android:padding="10dp"
                                android:text="@string/operation"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/names"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_column="2"
                                android:gravity="left"
                                android:padding="10dp"
                                android:text="@string/active"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/names"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_column="3"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/date_delivery"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/names"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_column="4"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/date_Exp"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/names"
                                android:textStyle="bold" />
                        </TableRow>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvBackCredential"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:itemCount="3"
                            tools:listitem="@layout/credential_back_item" />

                    </TableLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_margin="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                        <TextView
                            android:id="@+id/tvRestriction"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/restriction"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/items"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRestrictions"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:background="@color/colorRed"
                            android:padding="1dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/items"
                            android:textStyle="bold"
                            tools:text="Ninguno" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/lbl_vehiculos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/vehicle_type"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/title_credential"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardFront" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVehicleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_vehiculos"
            tools:itemCount="5"
            tools:listitem="@layout/credential_back_vehicle">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/vDivisor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:alpha="0.5"
            android:background="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@+id/rvVehicleList" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vDivisor">

            <TextView
                android:id="@+id/tvObligations"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/obligation_driver"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_information"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clInfo">

            <TextView
                android:id="@+id/tvCourses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="LISTADO DE CURSOS"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivInfoCourses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_information"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFrontZones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clCourses">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewHeaderFrontAuthZones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_text_rounded_celeste"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/lb_Zones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/access_zones"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sub_title_credential"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewHeaderFrontAuthZones">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAuthZone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineFooter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/guidelineFooter">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/logo_angloamerica" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>